<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".pantallaRadioButton" 
    android:orientation="vertical">
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblElige"/>
      
    <RadioGroup 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioGroup">
        
	    <RadioButton 
	    	android:id="@+id/radio1"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	        android:text="@string/textRadio1"/>
	    	
	    <RadioButton 
		    android:id="@+id/radio2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/textRadio2"/>    
	</RadioGroup>
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lblSeleccion"/>
      
</LinearLayout>